# whisper-taiwanese

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
src/whisper_taiwanese/: __init__.py  __main__.py  asr.py  cli.py  media.py  models.py  subtitles.py  types.py
tests/: test_cli.py  test_subtitles.py
